Add slide "Why XProc 3"

--- a/slides/index.html
+++ b/slides/index.html
@@ -54,6 +54,12 @@
 
       <article>
         <h1>Agenda</h1>
+        <ol>
+          <li>An Overview</li>
+          <li>Anatomy of a simple pipeline</li>
+          <li>Constructing pipelines</li>
+          <li>Exercises</li>
+        </ol>
       </article>
 
       <article>
@@ -88,6 +94,16 @@
             </ul>
           </dd>
         </dl>
+      </article>
+
+      <article>
+        <h1>Why use XProc 3</h1>
+        <p>XProc 3 was developed by the community to address the major pain points and shortcommings of XProc 1.0.</p>
+        <ul>
+          <li>More approachable syntax</li>
+          <li>XPath 3</li>
+          <li>Non-XML documents</li>
+        </ul>
       </article>
 
       <article>
